test/conformance/chainsaw/mutating-policies/userinfo/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-userinfo
