test/conformance/chainsaw/mutating-policies/userinfo/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test-userinfo
spec:
  containers:
  - name: nginx
    image: nginx:1.21
