test/conformance/chainsaw/mutating-policies/userinfo/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mpol-userinfo-access
spec:
  steps:
  - name: create namespace
    try:
    - apply:
        file: ns.yaml
  - name: create policy
    use:
      template: ..//../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ..//../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: mpol-userinfo-access
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: test-mutation-with-userinfo
    try:
    - create:
        file: pod.yaml
    - assert:
        timeout: 30s
        file: pod-mutated.yaml
